<resources>
    <string name="app_name">CreditReceipt</string>
    <string name="title_activity_landing">LandingActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="otp">OTP</string>
    <string name="login">Login</string>
    <string name="balance">Balance</string>
    <string name="credit_sale">Credit Sale</string>
    <string name="receipts">Receipts</string>
    <string name="customer">Customer</string>
    <string name="new_receipts">New Receipts</string>
    <string name="user">User</string>
    <string name="new_credit_sale">New Credit Sale</string>


    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="opening_balance">Opening Balance</string>

    <string name="dateformat">dd-MM-yyyy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customer_name">Customer Name</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
</resources>
