<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/ic_account_balance"
            android:title="@string/balance" />

        <item
            android:id="@+id/nav_credit_sale"
            android:icon="@drawable/ic_assessment"
            android:title="@string/credit_sale" />

        <item
            android:id="@+id/nav_receipts"
            android:icon="@drawable/ic_assessment"
            android:title="@string/receipts" />

        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_person"
            android:title="@string/customer" />

        <item
            android:id="@+id/nav_new_credit_sale"
            android:icon="@drawable/ic_add_circle"
            android:title="@string/new_credit_sale" />

        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_person_add"
            android:title="@string/user" />
    </group>

</menu>
