<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <AutoCompleteTextView
        android:id="@+id/et_customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/customer_name"
        android:imeOptions="actionSearch"
        android:inputType="textAutoComplete|textCapCharacters"
        android:padding="16dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/et_date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/box_white_thick_border_corner_ripple"
        android:ems="10"
        android:hint="@string/date"
        android:padding="16dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorLightBlack" />

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="number"
        android:padding="16dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:background="@drawable/box_white_thick_border_corner_ripple"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/save"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

</LinearLayout>