<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textAutoComplete|textCapCharacters"
            android:padding="8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:visibility="gone" />
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/box_white"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/address"
        android:inputType="textMultiLine|textCapCharacters"
        android:lines="5"
        android:padding="8dp"
        android:visibility="gone" />


    <TextView
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:background="@drawable/box_white_thick_border_corner_ripple"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/submit"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

</LinearLayout>
